--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["lvittor <lvittor@itba.edu.ar>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 pyspark = "3.1.2"
+python-twitter = "^3.5"
 
 [tool.poetry.dev-dependencies]
 
